ventana no modificable

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,10 +2,11 @@
 #Sat Sep 24 15:03:29 ART 2022
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=untitled
+application.vendor=Heisen
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -24,20 +25,24 @@ dist.jar=${dist.dir}/untitled.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/untitled
+endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=18
 javac.target=18
-javac.test.classpath=${build.classes.dir}
-javac.test.modulepath=${javac.modulepath}
+javac.test.classpath=\
+    ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -60,10 +65,15 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-run.classpath=${build.classes.dir}
+run.classpath=\
+    ${build.classes.dir}
 run.jvmargs=
-run.modulepath=${javac.modulepath}
-run.test.classpath=${build.classes.dir}\:${build.test.classes.dir}
-run.test.modulepath=${javac.test.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
+run.test.classpath=\
+    ${build.classes.dir}:\
+    ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.src.dir=src
