limite de caracteres a el tel y dni

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=untitled
+application.title=TP3_Obligatorio
 application.vendor=Heisen
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -21,10 +21,10 @@ debug.test.classpath=${run.test.classpath}
 debug.test.modulepath=${run.test.modulepath}
 dist.archive.excludes=
 dist.dir=dist
-dist.jar=${dist.dir}/untitled.jar
+dist.jar=${dist.dir}/TP3_Obligatorio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/untitled
+dist.jlink.output=${dist.jlink.dir}/TP3_Obligatorio
 endorsed.classpath=
 excludes=
 includes=**
@@ -59,7 +59,7 @@ javadoc.windowtitle=
 jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=untitled
+jlink.launcher.name=TP3_Obligatorio
 main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
